[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vol-forecast-and-control"
version = "0.1.0"
description = "Volatility forecasting, evaluation, and walk-forward experiments."
readme = "README.md"
requires-python = ">=3.10"

authors = [{ name = "Miroslav Ghanem" }]
license = { file = "LICENSE" }
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]

dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "pandas_datareader>=0.10",
  "yfinance>=0.2",
]

[project.optional-dependencies]
full = [
  "scipy>=1.10",
  "statsmodels>=0.14",
  "scikit-learn>=1.3",
  "xgboost>=2.0",
  "arch>=6.3",
  "matplotlib>=3.7",
]
dev = [
  "jupyter>=1.0",
  "ipykernel>=6.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
